--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@
 
 
 * { box-sizing: border-box; }
+textarea:focus-visible { outline: 0; }
 body {
     background: url("/images/chart_bg1.png") no-repeat;
     background-color: #2B2B3C;
@@ -77,8 +78,8 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    /*overflow: auto;*/
-    overflow: hidden;
+    overflow: auto;
+    /*overflow: hidden;*/
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -106,20 +107,19 @@ body {
     cursor: pointer;
 }
 
-.chat-box {
-    overflow-y: scroll;
-    max-height: 200px;
-    background-color: #2B2B3C;
-}
-.chat-box::-webkit-scrollbar {
-    width: 0;
-    background: transparent;
-}
 .chat-box-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+}
+.chat-box-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+    gap: 1rem;
 }
 .chat-box-title {
     display: flex;
@@ -144,11 +144,49 @@ body {
     background-size: 38px;
     display: block;
 }
-.charge-wrapper {
+
+.chat-box-body {
+}
+
+.chat-box {
+    overflow-y: scroll;
+    background-color: #2B2B3C;
+    width: 100%;
+    /*min-height: 450px;*/
+    border: 1px solid black;
+    padding: .5rem;
+    border-radius: 4px;
+    transition: .5s;
+    flex: 1;
+}
+
+.chat-box::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+
+.locked { pointer-events: none; }
+.generating {
+    color: darkgreen;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: .5rem;
+}
+.generating > span {
+    animation: typing 3s steps(40, end) infinite;
+    overflow: hidden;
+}
+
+.input-open { text-align: center; display: none; margin-top: 1rem; }
+.input-close { text-align: center; margin-top: 1rem; }
+.input-wrapper {
+    max-height : 175px;
+    overflow: hidden;
+    transition: .5s;
+    width: 100%;
+}
+#chat-form {
+    padding: .5rem;
+    border: 1px solid black;
+    border-radius: 4px;
 }
 
 #message-input {
@@ -156,7 +194,24 @@ body {
     overflow-y: auto;
     overflow-x: hidden;
     max-height: 200px;
+    border: 0;
+    padding: 0;
 }
+.send-button-wrapper {
+    text-align: right;
+}
+
+.error-message {
+    color: red;
+}
+
+.charge-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: .5rem;
+}
+
 
 /* Button Styles */
 .open-btn {
@@ -217,36 +272,32 @@ footer {
     border-color: #1D4ED8;
 }
 
-.chat-box {
-    width: 100%;
-    min-height: 450px;
-    border: 1px solid black;
-    padding: .5rem;
-    border-radius: 4px;
-    margin-bottom: 1rem;
-    transition: .5s;
-}
-.chat-box.closed {
-    min-height: 300px;
-}
-.locked { pointer-events: none; }
-.generating {
-    color: darkgreen;
-    animation: typing 5s steps(40, end) infinite;
-    overflow: hidden;
-}
 
-.input-open { text-align: center; }
-.input-close { text-align: center; display: none; }
-.input-wrapper { display: none; }
+/*.chat-box.closed {*/
+/*    min-height: 300px;*/
+/*}*/
 
-.error-message {
-    color: red;
-}
 
 @keyframes typing {
     0% { width: 0 }
-    100% { width: 50% }
+    100% { width: 100% }
+}
+
+@media (max-width: 768px) {
+    .modal-content {
+        transition: .5s;
+        width: 100%;
+        max-width: 100%;
+        border: 0;
+        border-radius: 0;
+        margin: 0;
+        min-height: 100%;
+    }
+    .assistant,
+    .user,
+    .system {
+        max-width: 80%;
+    }
 }
 
 
