--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,9 @@ body {
     letter-spacing: .5px;
     font-style: normal;
 }
+
+.main { display: flex; flex-direction: column; height: 100%; }
+
 .message {
     margin-top: 1rem;
 }
@@ -100,13 +103,14 @@ body {
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: aliceblue;
     margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
     max-width: 600px;
     border-radius: 8px;
+    height: 90%;
 }
 
 .close {
@@ -135,7 +139,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 600px;
+    flex: 1;
     gap: 1rem;
 }
 .chat-box-title {
@@ -162,9 +166,6 @@ body {
     display: block;
 }
 
-.chat-box-body {
-}
-
 .chat-box {
     overflow-y: scroll;
     background-color: #2B2B3C;
@@ -174,7 +175,8 @@ body {
     padding: .5rem;
     border-radius: 4px;
     transition: .5s;
-    flex: 1;
+    flex-basis: 450px;
+    flex-grow: 1;
 }
 
 .chat-box::-webkit-scrollbar {
@@ -192,13 +194,14 @@ body {
     overflow: hidden;
 }
 
-.input-open { text-align: center; display: none; margin-top: 1rem; }
-.input-close { text-align: center; margin-top: 1rem; }
+.input-open { text-align: center; display: none;}
+.input-close { text-align: center; }
 .input-wrapper {
     max-height : 175px;
     overflow: hidden;
     transition: .5s;
     width: 100%;
+    background-color: white;
 }
 #chat-form {
     padding: .5rem;
@@ -213,6 +216,7 @@ body {
     max-height: 200px;
     border: 0;
     padding: 0;
+    height: auto;
 }
 .send-button-wrapper {
     text-align: right;
@@ -317,7 +321,7 @@ footer {
         border: 0;
         border-radius: 0;
         margin: 0;
-        min-height: 100%;
+        height: 100%;
     }
     .assistant,
     .user,
@@ -327,6 +331,8 @@ footer {
 }
 
 @media (max-width: 579px) {
+    .modal-content { padding: 8px; }
+    .chat-box-body { gap: 8px; }
     .assistant {
         max-width: 100%;
     }
