--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,9 +33,12 @@ body {
     width: 90%;
 }
 .user {
-    color: rosybrown;
+    /*color: rosybrown;*/
+    color: #fff;
+    background-color: rgba(0,0,0,0.8);
     max-width: 75%;
-    border: 1px solid rosybrown;
+    /*border: 1px solid rosybrown;*/
+    border: 1px solid #E07B2F;
     padding: .5rem;
     margin: .5rem 0;
     border-radius: 8px;
@@ -47,9 +50,11 @@ body {
     margin-left: auto;
 }
 .assistant {
-    color: lightskyblue;
+    /*color: lightskyblue;*/
+    color: #fff;
+    background-color: rgba(0,0,0,0.8);
     max-width: 75%;
-    border: 1px solid lightskyblue;
+    border: 1px solid cornflowerblue;
     padding: .5rem;
     margin: .5rem 0;
     border-radius: 8px;
@@ -59,11 +64,15 @@ body {
     justify-content: center;
     align-items: flex-start;
 }
+.assistant,
+.user,
+.system { padding: 1rem; }
 .assistant > span { display: block; }
 .user > span { display: block; }
 .user > p {
     width: 100%;
-    background: linear-gradient(90deg, #526BD1 0%, #FF3BD4 97%);
+    /*background: linear-gradient(90deg, #526BD1 0%, #FF3BD4 97%);*/
+    background: linear-gradient(125deg, #D2691E 22.38%, #E07B2F 91.12%);
     padding: .5rem;
     margin: .25rem 0;
     text-align: center;
@@ -100,16 +109,20 @@ body {
     height: 100%;
     overflow: auto;
     /*overflow: hidden;*/
-    background-color: rgba(0, 0, 0, 0.4);
+    /*background-color: rgba(0, 0, 0, 0.2);*/
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .modal-content {
-    background-color: aliceblue;
+    position: relative;
+    /*background-color: aliceblue;*/
+    background-color: #2B2B3C;
     margin: 10% auto;
-    padding: 20px;
+    padding: 1rem;
     border: 1px solid #888;
     width: 80%;
-    max-width: 600px;
+    /*max-width: 600px;*/
+    max-width: 750px;
     border-radius: 8px;
     height: 90%;
 }
@@ -118,12 +131,15 @@ body {
     color: #aaa;
     font-size: 48px;
     font-weight: bold;
-    margin-left: 1rem;
+    /*margin-left: 1rem;*/
+    padding-bottom: 4px;
+    transition: .5s;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
+    /*color: black;*/
+    color: #fff;
     text-decoration: none;
     cursor: pointer;
 }
@@ -133,7 +149,8 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 4rem;
+    margin-bottom: 1rem;
+    /*height: 4rem;*/
 }
 .chat-box-body {
     display: flex;
@@ -141,13 +158,14 @@ body {
     justify-content: center;
     align-items: center;
     flex: 1;
-    gap: 1rem;
+    /*gap: 1rem;*/
 }
 .chat-box-title {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(116deg, #446FD0 6.04%, #FF3BD4 69.59%);
+    /*background: linear-gradient(116deg, #446FD0 6.04%, #FF3BD4 69.59%);*/
+    background: linear-gradient(125deg, #FFA500 22.38%, #EB8715 91.12%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -159,7 +177,7 @@ body {
     font-family: "Noto Sans";
 }
 .chat-box-title i {
-    background-image: url("/images/icon_top_chatai.png");
+    background-image: url("/images2/icon_top_chatai.png");
     width: 40px;
     height: 47px;
     margin: 0 10px 0 0;
@@ -172,7 +190,8 @@ body {
     background-color: #2B2B3C;
     width: 100%;
     /*min-height: 450px;*/
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+    border: 0;
     padding: .5rem;
     border-radius: 4px;
     transition: .5s;
@@ -187,14 +206,25 @@ body {
 
 .locked { pointer-events: none; }
 .generating {
-    color: darkgreen;
+    color: cornflowerblue;
     display: flex;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .generating > span {
     animation: typing 3s steps(40, end) infinite;
     overflow: hidden;
 }
 
+.input-toggle-btn {
+    padding: .25rem 1rem;
+    background-color: #ddd;
+    border: 0;
+    border-radius: 8px;
+    cursor: pointer;
+}
 .input-open { text-align: center; display: none;}
 .input-close { text-align: center; }
 .input-wrapper {
@@ -202,12 +232,14 @@ body {
     overflow: hidden;
     transition: .5s;
     width: 100%;
-    background-color: white;
+    background-color: transparent;
+    margin-bottom: 1rem;
 }
 #chat-form {
     padding: .5rem;
-    border: 1px solid black;
+    border: 1px solid #888;
     border-radius: 4px;
+    background-color: rgba(0,0,0,0.8);
 }
 
 #message-input {
@@ -217,6 +249,8 @@ body {
     max-height: 200px;
     border: 0;
     padding: 0;
+    background-color: transparent;
+    color: #fff;
 }
 .send-button-wrapper {
     text-align: right;
@@ -249,6 +283,9 @@ body {
     top: 50%;
     transform: translateY(-50%);
 }
+.generating {
+
+}
 
 
 /* Button Styles */
@@ -265,11 +302,13 @@ body {
     text-align: center;
     font-size: 0.6em;
     font-weight: 700;
-    background: linear-gradient(125deg, #5059AB 22.38%, #FF3BD4 91.12%);
+    /*background: linear-gradient(125deg, #5059AB 22.38%, #FF3BD4 91.12%);*/
+    background: linear-gradient(125deg, #D2691E 22.38%, #E07B2F 91.12%);
     filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
     cursor: pointer;
     color: white;
     transition: .5s;
+    border: 1px solid white;
 
 }
 .open-btn i {
@@ -296,18 +335,23 @@ footer {
     border-radius: 0.375rem;
 }
 
+.remaining { color: #fff; }
 .button-custom {
-    padding: 0.5rem 1rem;
-    background-color: #1D4ED8;
+    padding: 0.25rem 1rem;
+    /*background-color: #1D4ED8;*/
+    background: linear-gradient(125deg, #D2691E 22.38%, #E07B2F 91.12%);
     color: #fff;
-    border: 1px solid transparent;
-    border-radius: 0.375rem;
+    /*border: 1px solid transparent;*/
+    border: 1px solid white;
+    /*border-radius: 0.375rem;*/
+    border-radius: 1rem;
     transition: background-color 0.3s;
+    cursor: pointer;
 }
 
 .button-custom:hover {
-    background-color: #2563EB;
-    border-color: #1D4ED8;
+    /*background-color: #2563EB;*/
+    /*border-color: #1D4ED8;*/
 }
 
 
@@ -325,7 +369,50 @@ footer {
     color: white;
 }
 
-#language-select { padding: .25rem; }
+#language-select { padding: .25rem; display: none; }
+.select-lang-wrapper { display: flex; gap: .25rem; }
+.select-lang {
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: white;
+    opacity: .5;
+    transition: .5s;
+    cursor: pointer;
+}
+.select-lang.selected {
+    opacity: 1;
+}
+.select-kr {
+    background: url("/images2/country/korea.png") no-repeat center center;
+    background-size: contain;
+}
+.select-jp {
+    background: url("/images2/country/japan.png") no-repeat center center;
+    background-size: contain;
+}
+.select-us {
+    background: url("/images2/country/america.png") no-repeat center center;
+    background-size: contain;
+}
+.charge-modal-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: white;
+    opacity: .5;
+    display: flex;
+    flex-direction: column;
+    display: none;
+}
+
+.charge-modal-elem {
+    border: 1px solid black;
+    flex: 1;
+}
+
+
 
 @keyframes typing {
     0% { width: 0 }
@@ -333,6 +420,8 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .message { font-size: .9rem; }
+    .error-message { font-size: .9rem; }
     .modal-content {
         transition: .5s;
         width: 100%;
@@ -341,23 +430,27 @@ footer {
         border-radius: 0;
         margin: 0;
         height: 100%;
+        padding: .8rem;
     }
+    .chat-box-header { margin-bottom: .8rem; }
     .assistant,
     .user,
     .system {
         max-width: 80%;
+        padding: .5rem;
     }
+    .input-wrapper { margin-bottom: .8rem; }
 }
 
 @media (max-width: 579px) {
-    .modal-content { padding: 8px; }
-    .chat-box-body { gap: 8px; }
+    .modal-content { padding: .5rem; }
+    /*.chat-box-body { gap: 8px; }*/
     .assistant {
         max-width: 100%;
     }
     .message { font-size: .8rem; }
     .error-message { font-size: .8rem; }
-    .chat-box-header { height: 3rem; }
+    .chat-box-header { margin-bottom: .5rem; }
     .chat-box-title { font-size: 1rem; }
     .chat-box-title i { width: 24px; height: 30px; background-size: 24px; }
     .charge-wrapper { font-size: .8rem; }
@@ -366,6 +459,7 @@ footer {
     .button-custom {
         padding: .25rem .5rem;
     }
+    .input-wrapper { margin-bottom: .5rem; }
 }
 
 
