--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,6 +98,11 @@ body {
     padding: .25rem .5rem;
     margin: .25rem 0;
 }
+
+.recommend-img {
+    margin-bottom: .5rem;
+}
+
 /* Modal Styles */
 .modal {
     display: none;
@@ -205,19 +210,32 @@ body {
 }
 
 .locked { pointer-events: none; }
+/*.generating {*/
+/*    !*color: cornflowerblue;*!*/
+/*    color: white;*/
+/*    !*display: flex;*!*/
+/*    !*position: absolute;*!*/
+/*    !*right: 0;*!*/
+/*    !*top: 50%;*!*/
+/*    !*transform: translateY(-50%);*!*/
+/*    white-space: nowrap;*/
+/*    animation: typing 3s steps(40, end) infinite;*/
+/*    overflow: hidden;*/
+/*}*/
 .generating {
-    color: cornflowerblue;
-    display: flex;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.generating > span {
-    animation: typing 3s steps(40, end) infinite;
+    color: white;
+    white-space: nowrap;
     overflow: hidden;
-}
 
+    animation: typing 4s steps(40, end) infinite;
+    /*animation-iteration-count: infinite;*/
+    /*animation-fill-mode: forwards;*/
+    /*animation-delay: 0s, 3s;*/
+}
+/*.generating > span {*/
+/*    animation: typing 3s steps(40, end) infinite;*/
+/*    overflow: hidden;*/
+/*}*/
 .input-toggle-btn {
     padding: .25rem 1rem;
     background-color: #ddd;
@@ -283,10 +301,6 @@ body {
     top: 50%;
     transform: translateY(-50%);
 }
-.generating {
-
-}
-
 
 /* Button Styles */
 .open-btn {
@@ -412,13 +426,14 @@ footer {
     flex: 1;
 }
 
-
-
 @keyframes typing {
     0% { width: 0 }
-    100% { width: 100% }
+    80% { width: 100%; }
+    100% { width: 100%; }
 }
-
+/*@keyframes pause {*/
+/*    0%, 100% { width: 100%; }*/
+/*}*/
 @media (max-width: 768px) {
     .message { font-size: .9rem; }
     .error-message { font-size: .9rem; }
@@ -440,6 +455,9 @@ footer {
         padding: .5rem;
     }
     .input-wrapper { margin-bottom: .8rem; }
+    .recommend-img {
+        margin-bottom: .25rem;
+    }
 }
 
 @media (max-width: 579px) {
