--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -209,7 +209,7 @@ body {
     background: transparent;
 }
 
-.locked { pointer-events: none; }
+.locked { pointer-events: none; opacity: .5;}
 /*.generating {*/
 /*    !*color: cornflowerblue;*!*/
 /*    color: white;*/
@@ -258,8 +258,8 @@ body {
     border: 1px solid #888;
     border-radius: 4px;
     background-color: rgba(0,0,0,0.8);
+    transition: .5s;
 }
-
 #message-input {
     resize: none;
     overflow-y: auto;
@@ -368,7 +368,6 @@ footer {
     /*border-color: #1D4ED8;*/
 }
 
-
 /*.chat-box.closed {*/
 /*    min-height: 300px;*/
 /*}*/
@@ -408,22 +407,106 @@ footer {
     background: url("/images2/country/america.png") no-repeat center center;
     background-size: contain;
 }
-.charge-modal-content {
+.charge-modal {
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: white;
-    opacity: .5;
-    display: flex;
-    flex-direction: column;
+    background-color: rgba(255,255,255,0.4);
     display: none;
+ }
+.charge-modal-content {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    /*opacity: .5;*/
+    flex-direction: column;
+    gap: .5rem;
+    padding: .5rem;
+    display: flex;
+    border: 1px solid #888;
+}
+
+.charge-modal-header {
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+.charge-modal-body { display: flex; flex-direction: column; flex: 1; justify-content: center; align-items: center; gap: 2rem; }
+.charge-modal-question { display: flex; align-items: center; justify-content: center;}
+.charge-modal-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    cursor: pointer;
+}
+.charge-modal-btn {
+    padding: .5rem 1rem;
+    border: 1px solid black;
+    border-radius: 4px;
+    transition: .5s;
+}
+.charge-modal-btn:hover {
+    background-color: black;
+    color: white;
+}
+.charge-modal-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.charge-modal-close {
+    position: absolute;
+    right: 1.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
 }
 
 .charge-modal-elem {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     flex: 1;
+    display: flex;
+    /*border-bottom: 1px solid black;*/
+}
+.charge-amount {
+    flex: 2;
+    /*border: 1px solid black;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+}
+.charge-start {
+    flex: 1;
+    /*border: 1px solid black;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    position: relative;
+}
+.charge-start-btn {
+    padding: 0.5rem 2rem;
+    border: 1px solid black;
+    position: absolute;
+    left: -1rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: white;
+    width: calc(100% + 1rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
 @keyframes typing {
@@ -458,6 +541,7 @@ footer {
     .recommend-img {
         margin-bottom: .25rem;
     }
+    .charge-modal-content { width: 80%; }
 }
 
 @media (max-width: 579px) {
