--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,11 +29,12 @@ body {
     color: white;
     display: inline-flex;
     justify-content: center;
-    border: 1px solid white;
+    border: 1px solid #888;
     padding: .25rem;
-    border-radius: 1rem;
+    border-radius: 8px;
     font-size: .75rem;
-    width: 90%;
+    min-width: 75%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 .user {
     /*color: rosybrown;*/
@@ -69,7 +70,7 @@ body {
 }
 .assistant,
 .user,
-.system { padding: 1rem; }
+.system { padding: .5rem 1rem; }
 .assistant > span { display: block; }
 .user > span { display: block; }
 .user > p {
@@ -300,13 +301,15 @@ body {
     padding: 0;
     background-color: transparent;
     color: #fff;
+    font-family: 'Figtree', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 .send-button-wrapper {
     text-align: right;
 }
 
 .error-message {
-    color: red;
+    color: white;
+    background-color: rgba(0,0,0,0.8);
     border: 1px solid red;
     border-radius: 8px;
     padding: .5rem;
@@ -573,6 +576,7 @@ footer {
         max-width: 80%;
         padding: .5rem;
     }
+    .system { font-size: .65rem; padding: .25rem }
     .input-wrapper { margin-bottom: .8rem; }
     .recommend-img {
         margin-bottom: .25rem;
